gccida/g0/extend_value_for_giv
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extend_value_for_giv/src/loop.c:7867:28: error: unknown type name 'induction_1'
rtx  extend_value_for_giv( induction_1 *v, rtx value) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extend_value_for_giv/src/loop.c:7886:25: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return gen_rtx_fmt_e( ( rtx_code)*( _WORD *)ext_dep, ( machine_mode)*( ( unsigned __int8 *)ext_dep + 2), value); 
                        ^~~~~~~~
                        rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extend_value_for_giv/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extend_value_for_giv/src/loop.c:7886:34: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
return gen_rtx_fmt_e( ( rtx_code)*( _WORD *)ext_dep, ( machine_mode)*( ( unsigned __int8 *)ext_dep + 2), value); 
                      ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extend_value_for_giv/src/loop.c:7886:56: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( ( rtx_code)*( _WORD *)ext_dep, ( machine_mode)*( ( unsigned __int8 *)ext_dep + 2), value); 
                                                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extend_value_for_giv/src/obj/loop.o] Error 1
